--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,6 @@
     "name": "coenmooij/sudoku",
     "description": "Sudoku package for generating, validating and solving sudoku puzzles",
     "type": "library",
-    "require-dev": {
-        "phpunit/phpunit": "^6.4"
-    },
     "license": "MIT",
     "authors": [
         {
@@ -13,5 +10,15 @@
             "homepage": "https://coenmooij.nl"
         }
     ],
-    "require": {}
+    "require": {
+        "php": ">=7.1.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^6.4"
+    },
+    "autoload": {
+        "psr-4": {
+            "CoenMooij\\Sudoku": "src/"
+        }
+    }
 }
