--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "autoload": {
         "psr-4": {
-            "CoenMooij\\Sudoku": "src/"
+            "CoenMooij\\Sudoku\\": "src/"
         }
     }
 }
