--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,18 @@
         "mockery/mockery": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.4"
+        "phpunit/phpunit": "^6.4",
+        "phpstan/phpstan": "^0.8.5",
+        "friendsofphp/php-cs-fixer": "^2.7"
     },
     "autoload": {
         "psr-4": {
             "CoenMooij\\Sudoku\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "CoenMooij\\Sudoku\\": "tests/"
         }
     }
 }
