--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
         }
     ],
     "require": {
-        "php": ">=7.1.0",
-        "mockery/mockery": "^1.0"
+        "php": ">=7.1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4",
         "phpstan/phpstan": "^0.8.5",
-        "friendsofphp/php-cs-fixer": "^2.7"
+        "friendsofphp/php-cs-fixer": "^2.7",
+        "mockery/mockery": "^1.0"
     },
     "autoload": {
         "psr-4": {
