--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,11 @@
     "description": "Sudoku package for generating, validating and solving sudoku puzzles",
     "type": "library",
     "license": "MIT",
-    "version": "0.2.3",
+    "version": "1.0",
     "authors": [
         {
             "name": "Coen Mooij",
-            "email": "coenmooij@gmail.com",
-            "homepage": "https://coenmooij.nl"
+            "email": "coenmooij@gmail.com"
         }
     ],
     "require": {
